Fix vertical align

--- a/assets/main.css
+++ b/assets/main.css
@@ -282,6 +282,7 @@ ol.breadcrumb > li.page {
   grid-template-columns: repeat(auto-fit, 44px);
   justify-content: center;
   justify-items: normal;
+  align-items: stretch;
   gap: 10px;
   padding: 0;
   font-size: 19px;
@@ -308,11 +309,15 @@ ol.breadcrumb > li.page {
 
 .page-item.last {
   grid-column: -2 / -1;
+  font-size: 1.2em;
 }
 
 a.page-link {
-  display: block;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 8px 10px;
   border-radius: 8px;
   background-color: #dfdfdf;
   color: #505050;
